@startuml
left to right direction

package Model{
	class Pet{
		-pid:int
		-type:Type
		-birthDate:Date
		-sex:String
		-price:int
		-description:String
	}

	class Type{
		-tid:int
		-tname:String
	}

	class User{
		-uid:int
		-uname:String
		-password:String
	}

	class Booking{
		-bid:int
		-pid:int
		-tid:int
		-bookingDate:Timestamp
		-telNum:String
		-pet:Pet
		-type:Type
		-user:User
	}

	class PetDAO{
		+findAll():ArrayList<Pet>
		+findByTid():ArrayList<Pet>
		+findByPid(int pid):Pet
		+insert(Pet p)
		+update(Pet p)
		+delete(int pid)
	}

	class TypeDAO{
		+findAll():ArrayList<Type>
		+findByTid(int tid):Type
		+insert(Type t)
		+delete(int pid)
	}

	class UserDAO{
		+login(String uname, String password):User
		+findByUid(int uid):User
	}

	class BookingDAO{
		+findAll():ArrayList<Booking>
		+findByBid(int bid):Booking
		+findByUid(int uid):ArrayList<Booking>
		+insert(Booking b)
		+update(Booking b)
		+delete(int bid)
	}
}

package Servlet{
	class TopDiagramServlet{
		+doGet()
		+doPost()
	}

	class PetListServlet{
		+doGet()
		+doPost()
	}

	class LoginServlet{
		+doGet()
		+doPost()
	}

	class LogoutServlet{
		+doGet()
		+doPost()
	}

	class PetInsertServlet{
		+doGet()
		+doPost()
	}

	class PetUpdateServlet{
		+doGet()
		+doPost()
	}

	class PetDeleteServlet{
		+doGet()
		+doPost()
	}

	class TypeInsertServlet{
		+doGet()
		+doPost()
	}

	class TypeDeleteServlet{
		+doGet()
		+doPost()
	}

	class BookingServlet{
		+doGet()
		+doPost
	}

	class BookingCheckServlet{
		+doGet()
		+doPost()
	}

	class BookingListServlet{
		+doGet()
		+doPost()
	}

	class BookingDeleteServlet{
		+doGet()
		+doPost()
	}
}


PetListServlet..>TypeDAO
TypeInsertServlet..>TypeDAO
TypeDeleteServlet..>TypeDAO
PetListServlet..>PetDAO
PetInsertServlet..>PetDAO
PetUpdateServlet..>PetDAO
PetDeleteServlet..>PetDAO
LoginServlet..>UserDAO
BookingCheckServlet..>BookingDAO
BookingListServlet..>BookingDAO
BookingDeleteServlet..>BookingDAO
BookingServlet..>BookingDAO
LogoutServlet..>UserDAO

BookingDAO..>Booking
PetDAO..>Pet
TypeDAO..>Type
UserDAO..>User
Booking->Pet
Pet->Type
@enduml